--- a/main.css
+++ b/main.css
@@ -1,20 +1,26 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Playfair Display', serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    background-color: white;
     color: #333;
 }
 
+.greek-islands {
+    width: 50%;
+    height: 50%;
+    align-self: center;
+}
+
 header {
-    background-color: #0077cc;
-    color: white;
+    background-color: white;
+    color: #0077cc;
     padding: 1em 0;
     text-align: center;
 }
 
 header h1 {
-    margin: 0;
+   margin: 0;
 }
 
 nav ul {
@@ -25,10 +31,11 @@ nav ul {
 nav ul li {
     display: inline;
     margin: 0 10px;
+    padding: 0 1em;
 }
 
 nav ul li a {
-    color: white;
+    color: #0077cc;
     text-decoration: none;
     font-weight: bold;
 }
@@ -53,6 +60,11 @@ section p {
     margin-bottom: 20px;
 }
 
+.islands {
+    width: 50%;
+    height: 50%;
+}
+
 .destination img {
     max-width: 100%;
     height: auto;
@@ -60,11 +72,11 @@ section p {
 }
 
 footer {
-    background-color: #333;
-    color: white;
+    background-color: white;
+    color: black;
     text-align: center;
-    padding: 10px 0;
-    position: fixed;
+    padding: 5px 0;
+    position: flex;
     bottom: 0;
     width: 100%;
 }
