--- a/styles/main.css
+++ b/styles/main.css
@@ -1,11 +1,23 @@
 body {
+    display: flex;
+    flex-direction: column;
+   text-align: left;
     font-family: 'Playfair Display', serif;
     margin: 0;
     padding: 0;
+    width: 960px;
+    border: 1px solid black;
     background-color: white;
     color: #333;
 }
 
+.cursive-text {
+    font-family: cursive;
+}
+img {
+    float: left;
+    padding: 1em 1em 1em 0;
+}
 .greek-islands {
     width: 50%;
     height: 50%;
@@ -21,11 +33,17 @@ header {
 
 header h1 {
    margin: 0;
+   text-align: left;
+   padding-left: 2em;
+   color: white;
+   background-color: #0077cc;
+   font-weight: lighter;
 }
 
 nav ul {
     list-style: none;
-    padding: 0;
+    padding: 0 0 2em 0;
+    border-bottom: 1px solid #0077cc;
 }
 
 nav ul li {
@@ -41,6 +59,7 @@ nav ul li a {
 }
 
 main {
+    
     padding: 20px;
 }
 
