--- a/styles/main.css
+++ b/styles/main.css
@@ -26,6 +26,10 @@ img {
 
 header {
     background-color: white;
+    background-image: url(/images/female.png);
+    background-size: 100px 100px;
+    background-position: right;
+    background-repeat: no-repeat;
     color: #0077cc;
     padding: 1em 0;
     text-align: center;
@@ -33,17 +37,17 @@ header {
 
 header h1 {
    margin: 0;
-   text-align: left;
+   text-align: center;
    padding-left: 2em;
-   color: white;
-   background-color: #0077cc;
+   color: #0077cc;
+  /* background-color: #0077cc;*/
    font-weight: lighter;
 }
 
 nav ul {
     list-style: none;
-    padding: 0 0 2em 0;
-    border-bottom: 1px solid #0077cc;
+    padding: 1em 0 1em 0;
+    border-bottom: 1px solid lightgray;
 }
 
 nav ul li {
@@ -53,9 +57,10 @@ nav ul li {
 }
 
 nav ul li a {
-    color: #0077cc;
+    color: black;
+    font-size: 110%;
     text-decoration: none;
-    font-weight: bold;
+ 
 }
 
 main {
