--- a/styles/history.css
+++ b/styles/history.css
@@ -4,7 +4,7 @@ body {
     width:960px;
     border: 1px solid black;
     font-family: 'Playfair Display', serif;
-    margin: 0;
+    margin: 1em auto;
     padding: 0;
     background-color: white;
     color: #333;
@@ -65,6 +65,12 @@ main {
     padding: 20px;
 }
 
+img {
+    width: 50%;
+    height: 50%;
+    float: right;
+    padding: 0 0 1em 1em;
+}
 section {
     margin-bottom: 40px;
 }
