--- a/styles/main.css
+++ b/styles/main.css
@@ -3,7 +3,7 @@ body {
     flex-direction: column;
    text-align: left;
     font-family: 'Playfair Display', serif;
-    margin: 0;
+    margin: 1em auto;
     padding: 0;
     width: 960px;
     border: 1px solid black;
