--- a/styles/mykonos.css
+++ b/styles/mykonos.css
@@ -1,10 +1,14 @@
 body {
-    font-family: 'Playfair Display', serif;
-    margin: 0;
-    padding: 0;
-    background-color: white;
-    color: #333;
-}
+        display: flex;
+        flex-direction: column;
+        font-family: 'Playfair Display', serif;
+        margin: 1em auto;
+        padding: 0;
+        background-color: white;
+        color: #333;
+        width: 960px;
+        border: 1px solid black;
+    }
 
 .cursive-text {
     font-family: cursive;
