--- a/styles/main.css
+++ b/styles/main.css
@@ -31,7 +31,7 @@ header {
     background-position: right;
     background-repeat: no-repeat;
     color: #0077cc;
-    padding: 1em 0;
+    padding: 1em 0 0 0;
     text-align: center;
 }
 
@@ -65,7 +65,7 @@ nav ul li a {
 
 main {
     
-    padding: 20px;
+    padding: 0 20px;
 }
 
 section {
