--- a/styles/mykonos.css
+++ b/styles/mykonos.css
@@ -1,14 +1,14 @@
 body {
-        display: flex;
-        flex-direction: column;
-        font-family: 'Playfair Display', serif;
-        margin: 1em auto;
-        padding: 0;
-        background-color: white;
-        color: #333;
-        width: 960px;
-        border: 1px solid black;
-    }
+    display: flex;
+    flex-direction: column;
+    font-family: 'Playfair Display', serif;
+    margin: 1em auto;
+    padding: 0;
+    background-color: white;
+    color: #333;
+    width: 960px;
+    border: 1px solid black;
+}
 
 .cursive-text {
     font-family: cursive;
@@ -60,19 +60,27 @@ nav ul li a {
 }
 
 main {
-    padding: 20px;
+    padding: 0 20px;
 }
 
 section {
     margin-bottom: 40px;
 }
 
+section h1 {
+    font-size: 150%;
+    padding-left: 2em;
+}
 section h2 {
     color: #0077cc;
 }
 
+figcaption {
+    text-align: right;
+}
 section p {
     line-height: 1.6;
+    padding: 0 2em;
 }
 
 .destination {
@@ -85,9 +93,8 @@ section p {
 }
 
 .destination img {
-    max-width: 100%;
+   width:100%;
     height: auto;
-    border-radius: 8px;
 }
 
 footer {
