--- a/styles/about.css
+++ b/styles/about.css
@@ -60,15 +60,21 @@ nav ul li a {
 }
 
 main {
-    padding: 0 20px;
+    padding: 0 10px;
 }
-
+img {
+    width: 40%;
+    height: 40%;
+    float: left;
+    padding-right: 1em;
+}
 section {
     margin-bottom: 40px;
 }
 
 section h2 {
     color: #0077cc;
+    padding-left: 2em;
 }
 
 section p {
