--- a/styles/crete.css
+++ b/styles/crete.css
@@ -13,6 +13,7 @@ body {
 .cursive-text {
     font-family: cursive;
 }
+
 .greek-islands {
     width: 50%;
     height: 50%;
@@ -66,12 +67,20 @@ section {
     margin-bottom: 40px;
 }
 
+section h1 {
+    font-size: 150%;
+    padding-left: 2em;
+}
 section h2 {
     color: #0077cc;
 }
 
+figcaption {
+    text-align: right;
+}
 section p {
     line-height: 1.6;
+    padding: 0 2em;
 }
 
 .destination {
@@ -84,9 +93,8 @@ section p {
 }
 
 .destination img {
-    max-width: 100%;
+   width:100%;
     height: auto;
-    border-radius: 8px;
 }
 
 footer {
